--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@astrojs/sitemap": "^3.4.1",
     "@tailwindcss/vite": "^4.1.8",
-    "astro": "^5.9.2",
+    "animejs": "^4.0.2",
+    "astro": "^5.10.0",
     "tailwindcss": "^4.1.8"
   }
 }
