--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.4.1",
+    "@sanity/client": "^7.6.0",
     "@tailwindcss/vite": "^4.1.8",
     "animejs": "^4.0.2",
     "astro": "^5.10.0",
+    "astro-portabletext": "^0.11.1",
     "tailwindcss": "^4.1.8"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
