--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,7 +1,7 @@
 [
   {
-    "title": "Yourmove AI",
-    "link": "https://www.yourmove.ai/",
+    "title": "Xclusivecars",
+    "link": "https://xclusivecars-website.pages.dev/",
     "description": "",
     "services": ["Web Development", "UX/UI Design"],
     "tools": [
@@ -33,6 +33,24 @@
     "cover": "",
     "date": "April 2025"
   },
+  {
+    "title": "Yourmove AI",
+    "link": "https://www.yourmove.ai/",
+    "description": "",
+    "services": ["Web Development", "UX/UI Design"],
+    "tools": [
+      "Webflow",
+      "Astro",
+      "Shopify",
+      "Webstudio",
+      "Sanity",
+      "Turso",
+      "GSAP"
+    ],
+    "cover": "",
+    "date": "April 2025"
+  },
+
   {
     "title": "New Voters",
     "link": "https://www.new-voters.org/",
@@ -69,75 +87,7 @@
   },
   {
     "title": "Taboogrow",
-    "link": "https://taboogrow.com/",
-    "description": "",
-    "services": ["Web Development", "UX/UI Design"],
-    "tools": [
-      "Webflow",
-      "Astro",
-      "Shopify",
-      "Webstudio",
-      "Sanity",
-      "Turso",
-      "GSAP"
-    ],
-    "cover": "",
-    "date": "April 2025"
-  },
-  {
-    "title": "MarkLevi",
-    "link": "https://marklevi.com/",
-    "description": "",
-    "services": ["Web Development", "UX/UI Design"],
-    "tools": [
-      "Webflow",
-      "Astro",
-      "Shopify",
-      "Webstudio",
-      "Sanity",
-      "Turso",
-      "GSAP"
-    ],
-    "cover": "",
-    "date": "April 2025"
-  },
-  {
-    "title": "Videostudioalex",
-    "link": "https://videostudioalex.com/",
-    "description": "",
-    "services": ["Web Development", "UX/UI Design"],
-    "tools": [
-      "Webflow",
-      "Astro",
-      "Shopify",
-      "Webstudio",
-      "Sanity",
-      "Turso",
-      "GSAP"
-    ],
-    "cover": "",
-    "date": "April 2025"
-  },
-  {
-    "title": "Sri Rupa Seva Kunj",
-    "link": "https://www.rupaseva.com/en/main",
-    "description": "",
-    "services": ["Web Development", "UX/UI Design"],
-    "tools": [
-      "Webflow",
-      "Astro",
-      "Shopify",
-      "Webstudio",
-      "Sanity",
-      "Turso",
-      "GSAP"
-    ],
-    "cover": "",
-    "date": "April 2025"
-  },
-  {
-    "title": "Motorbunny (18+)",
-    "link": "https://motorbunny.com/",
+    "link": "https://taboogrowcom-tlt9a.wstd.io/",
     "description": "",
     "services": ["Web Development", "UX/UI Design"],
     "tools": [
@@ -170,8 +120,60 @@
     "date": "April 2025"
   },
   {
-    "title": "Xclusivecars",
-    "link": "https://xclusivecars-website.pages.dev/",
+    "title": "Videostudioalex",
+    "link": "https://videostudioalex.com/",
+    "description": "",
+    "services": ["Web Development", "UX/UI Design"],
+    "tools": [
+      "Webflow",
+      "Astro",
+      "Shopify",
+      "Webstudio",
+      "Sanity",
+      "Turso",
+      "GSAP"
+    ],
+    "cover": "",
+    "date": "April 2025"
+  },
+  {
+    "title": "MarkLevi",
+    "link": "https://marklevi.com/",
+    "description": "",
+    "services": ["Web Development", "UX/UI Design"],
+    "tools": [
+      "Webflow",
+      "Astro",
+      "Shopify",
+      "Webstudio",
+      "Sanity",
+      "Turso",
+      "GSAP"
+    ],
+    "cover": "",
+    "date": "April 2025"
+  },
+
+  {
+    "title": "Sri Rupa Seva Kunj",
+    "link": "https://www.rupaseva.com/en/main",
+    "description": "",
+    "services": ["Web Development", "UX/UI Design"],
+    "tools": [
+      "Webflow",
+      "Astro",
+      "Shopify",
+      "Webstudio",
+      "Sanity",
+      "Turso",
+      "GSAP"
+    ],
+    "cover": "",
+    "date": "April 2025"
+  },
+  {
+    "title": "Motorbunny (18+)",
+    "link": "https://motorbunny.com/",
     "description": "",
     "services": ["Web Development", "UX/UI Design"],
     "tools": [
